--- a/src/layout/Header.css
+++ b/src/layout/Header.css
@@ -5,7 +5,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:#d30f0f;
+    background-color: #d10e0e;
   }
   
   li {
